--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div class="feature">
 			<h1>Hello Node</h1>
 			<div class="brand">
-				Jenkins10 <strong>X</strong>
+				Jenkins Very AWESOME <strong>X</strong>
 			</div>
 		</div>
 	</div>
